переписал полносью логику, написал классы подготовки строки, парсера, валидатора и часть преобразования в обратную польскую нотацию

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,10 +5,10 @@ TEST_FLAGS  =  -lgtest -pthread -std=c++17  -lstdc++ -lpthread -lm
 all: clang compile run 
 
 clang: 
-	clang-format --style=GOOGLE -i *.cpp *.h
+	clang-format --style=GOOGLE -i *.cc *.h
 
 compile:
-	$(CC) *.cpp main.cc $(CCFLAGS)
+	$(CC) *.cc $(CCFLAGS)
 	
 run:	
 	./a.out
