--- a/src/s21_smart_calc_v_2_0/Makefile
+++ b/src/s21_smart_calc_v_2_0/Makefile
@@ -57,10 +57,10 @@ RM = /usr/bin/cmake -E rm -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = /home/bonnypedubuntu/21-school.ru/CPP3_SmartCalc_v2.0-1/src/s21_smart_calc_v_2_0
+CMAKE_SOURCE_DIR = /home/bonnypedubuntu/21-school.ru/CPP/CPP3_SmartCalc_v2.0-1/src/s21_smart_calc_v_2_0
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = /home/bonnypedubuntu/21-school.ru/CPP3_SmartCalc_v2.0-1/src/s21_smart_calc_v_2_0
+CMAKE_BINARY_DIR = /home/bonnypedubuntu/21-school.ru/CPP/CPP3_SmartCalc_v2.0-1/src/s21_smart_calc_v_2_0
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -132,9 +132,9 @@ install/strip/fast: preinstall/fast
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/bonnypedubuntu/21-school.ru/CPP3_SmartCalc_v2.0-1/src/s21_smart_calc_v_2_0/CMakeFiles /home/bonnypedubuntu/21-school.ru/CPP3_SmartCalc_v2.0-1/src/s21_smart_calc_v_2_0//CMakeFiles/progress.marks
+	$(CMAKE_COMMAND) -E cmake_progress_start /home/bonnypedubuntu/21-school.ru/CPP/CPP3_SmartCalc_v2.0-1/src/s21_smart_calc_v_2_0/CMakeFiles /home/bonnypedubuntu/21-school.ru/CPP/CPP3_SmartCalc_v2.0-1/src/s21_smart_calc_v_2_0//CMakeFiles/progress.marks
 	$(MAKE) $(MAKESILENT) -f CMakeFiles/Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/bonnypedubuntu/21-school.ru/CPP3_SmartCalc_v2.0-1/src/s21_smart_calc_v_2_0/CMakeFiles 0
+	$(CMAKE_COMMAND) -E cmake_progress_start /home/bonnypedubuntu/21-school.ru/CPP/CPP3_SmartCalc_v2.0-1/src/s21_smart_calc_v_2_0/CMakeFiles 0
 .PHONY : all
 
 # The main clean target
